Name:                freetype2
Version:             0.1.2
Synopsis:            Haskell binding for FreeType 2 library
Description:         Wrapper around FreeType 2 library.  Relevant
                     exerpts from the FreeType 2 website:
                     .
                     What is FreeType 2?
                     .
                     FreeType 2 is a software font engine that is
                     designed to be small, efficient, highly
                     customizable, and portable while capable of
                     producing high-quality output (glyph images). It
                     can be used in graphics libraries, display
                     servers, font conversion tools, text image
                     generation tools, and many other products as
                     well.
                     .
                     The following is a non-exhaustive list of
                     features provided by FreeType 2.
                     .
                     * FreeType 2 provides a simple and easy-to-use
                     API to access font content in a uniform way,
                     independently of the file format. Additionally,
                     some format-specific APIs can be used to access
                     special data in the font file.
                     .
                     * Unlike most comparable libraries, FreeType 2
                     supports scalable font formats like TrueType or
                     Type 1 natively and can return the outline data
                     (and control instructions/hints) to client
                     applications.
                     .
                     By default, FreeType 2 supports the following
                     font formats.
                     .
                     * TrueType fonts (and collections)
                     .
                     * Type 1 fonts
                     .
                     * CID-keyed Type 1 fonts
                     .
                     * CFF fonts
                     .
                     * OpenType fonts (both TrueType and CFF variants)
                     .
                     * SFNT-based bitmap fonts
                     .
                     * X11 PCF fonts
                     .
                     * Windows FNT fonts
                     .
                     * BDF fonts (including anti-aliased ones)
                     .
                     * PFR fonts
                     .
                     * Type 42 fonts (limited support)
                     .
                     From a given glyph outline, FreeType 2 is capable
                     of producing a high-quality monochrome bitmap, or
                     anti-aliased pixmap, using 256 levels of
                     'gray'. This is much better than the 5 levels
                     used by Windows 9x\/98\/NT\/2000 or FreeType 1.
                     .
                     FreeType 2 supports all the character mappings
                     defined by the TrueType and OpenType
                     specification. It is also capable of
                     automatically synthetizing a Unicode charmap from
                     Type 1 fonts, which puts an end to the painful
                     'encoding translation' headache common with this
                     format (of course, original encodings are also
                     available in the case where you need them).
                     .
                     The FreeType 2 core API provides simple functions
                     to access advanced information like glyph names
                     or kerning data.
                     .
                     FreeType 2 provides information that is often not
                     available from other similar font engines, like
                     kerning distances, glyph names, vertical metrics,
                     etc.
                     .
                     FreeType 2 provides its own caching subsystem
                     since release 2.0.1. It can be used to cache
                     either face instances or glyph images
                     efficiently.
License:             BSD3
License-file:        LICENSE
Author:              Jason Dagit <dagitj@gmail.com>
Maintainer:          Jason Dagit <dagitj@gmail.com>
Copyright:           Copyright Jason Dagit 2011
Category:            Graphics
Build-type:          Simple
Extra-source-files:  objs/ftmodule.h
                     include/*.h
                     include/freetype/*.h
                     include/freetype/config/*.h
                     include/freetype/internal/*.h
                     include/freetype/internal/services/*.h
                     src/autofit/*.c
                     src/autofit/*.h
                     src/base/*.c
                     src/base/*.h
                     src/bdf/*.c
                     src/bdf/*.h
                     src/bzip2/*.c
                     src/bzip2/*.h
                     src/cache/*.c
                     src/cache/*.h
                     src/cff/*.c
                     src/cff/*.h
                     src/cid/*.c
                     src/cid/*.h
                     src/gxvalid/*.c
                     src/gxvalid/*.h
                     src/gzip/*.c
                     src/gzip/*.h
                     src/lzw/*.c
                     src/lzw/*.h
                     src/otvalid/*.c
                     src/otvalid/*.h
                     src/pcf/*.c
                     src/pcf/*.h
                     src/pfr/*.c
                     src/pfr/*.h
                     src/psaux/*.c
                     src/psaux/*.h
                     src/pshinter/*.c
                     src/pshinter/*.h
                     src/psnames/*.c
                     src/psnames/*.h
                     src/raster/*.c
                     src/raster/*.h
                     src/sfnt/*.c
                     src/sfnt/*.h
                     src/smooth/*.c
                     src/smooth/*.h
                     src/tools/*.c
                     src/tools/*.h
                     src/tools/docmaker/*.c
                     src/tools/docmaker/*.h
                     src/tools/ftfuzzer/*.c
                     src/tools/ftfuzzer/*.h
                     src/tools/ftrandom/*.c
                     src/tools/ftrandom/*.h
                     src/truetype/*.c
                     src/truetype/*.h
                     src/type1/*.c
                     src/type1/*.h
                     src/type42/*.c
                     src/type42/*.h
                     src/winfonts/*.c
                     src/winfonts/*.h

Cabal-version:       >=1.8

Flag examples
  Description: Build example programs
  Default: False

Executable freetype-example1

  if flag(examples)
    Buildable: True
    Build-depends: base > 3 && < 5, freetype2, array,
                   missing-foreign >= 0.1.1 && < 0.2.0
  else
    Buildable: False
  Main-is:       Main.hs

Library
  -- Modules exported by the library.
  Exposed-modules: Graphics.Rendering.FreeType.Internal
                   Graphics.Rendering.FreeType.Internal.BBox
                   Graphics.Rendering.FreeType.Internal.Bitmap
                   Graphics.Rendering.FreeType.Internal.BitmapGlyph
                   Graphics.Rendering.FreeType.Internal.BitmapSize
                   Graphics.Rendering.FreeType.Internal.CharMap
                   Graphics.Rendering.FreeType.Internal.Driver
                   Graphics.Rendering.FreeType.Internal.Face
                   Graphics.Rendering.FreeType.Internal.FaceType
                   Graphics.Rendering.FreeType.Internal.Generic
                   Graphics.Rendering.FreeType.Internal.Glyph
                   Graphics.Rendering.FreeType.Internal.GlyphMetrics
                   Graphics.Rendering.FreeType.Internal.GlyphSlot
                   Graphics.Rendering.FreeType.Internal.Library
                   Graphics.Rendering.FreeType.Internal.Matrix
                   Graphics.Rendering.FreeType.Internal.Memory
                   Graphics.Rendering.FreeType.Internal.Module
                   Graphics.Rendering.FreeType.Internal.OpenArgs
                   Graphics.Rendering.FreeType.Internal.Outline
                   Graphics.Rendering.FreeType.Internal.OutlineGlyph
                   Graphics.Rendering.FreeType.Internal.Parameter
                   Graphics.Rendering.FreeType.Internal.PrimitiveTypes
                   Graphics.Rendering.FreeType.Internal.RasterParams
                   Graphics.Rendering.FreeType.Internal.Renderer
                   Graphics.Rendering.FreeType.Internal.Size
                   Graphics.Rendering.FreeType.Internal.SizeMetrics
                   Graphics.Rendering.FreeType.Internal.SizeRequest
                   Graphics.Rendering.FreeType.Internal.Stream
                   Graphics.Rendering.FreeType.Internal.Span
                   Graphics.Rendering.FreeType.Internal.SubGlyph
                   Graphics.Rendering.FreeType.Internal.Vector

  -- Packages needed in order to build this package.
  Build-depends: base > 3 && < 5

  -- Modules not exported by this package.
  -- Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools: hsc2hs
  ghc-options: -Wall
  include-dirs: include
                include/freetype/config
                include/freetype
                src/base
                src/truetype
                src/type1
                src/cff
                src/cid
                src/pfr
                src/type42
                src/winfonts
                src/pcf
                src/bdf
                src/sfnt
                src/autofit
                src/pshinter
                src/raster
                src/smooth
                src/cache
                src/gzip
                src/lzw
                src/psaux
                src/psnames

  cc-options: -DFT_CONFIG_CONFIG_H=<ftconfig.h>
              -DFT2_BUILD_LIBRARY
              -DFT_CONFIG_MODULES_H=<ftmodule.h>
              -DDARWIN_NO_CARBON
              -DFT_CONFIG_OPTION_SUBPIXEL_RENDERING
              -DTT_CONFIG_OPTION_SUBPIXEL_HINTING

  c-sources:
             src/psaux/psaux.c
             src/winfonts/winfnt.c
             src/type42/type42.c
             src/bdf/bdf.c
             src/psnames/psnames.c
             src/cache/ftcache.c
             src/truetype/truetype.c
             src/pcf/pcf.c
             src/cff/cff.c
             src/cid/type1cid.c
             src/lzw/ftlzw.c
             src/gxvalid/gxvfgen.c
             src/gxvalid/gxvalid.c
             src/smooth/smooth.c
             src/raster/raster.c
             src/autofit/autofit.c
             src/gzip/ftgzip.c
             src/pfr/pfr.c
             src/sfnt/sfnt.c
             src/type1/type1.c
             src/bzip2/ftbzip2.c
             src/pshinter/pshinter.c
             src/otvalid/otvalid.c
             src/base/ftbdf.c
             src/base/ftdebug.c
             src/base/ftbase.c
             src/base/ftsystem.c
             src/base/ftapi.c
             src/base/ftcid.c
             src/base/ftotval.c
             src/base/fttype1.c
             src/base/ftlcdfil.c
             src/base/ftbbox.c
             src/base/ftwinfnt.c
             src/base/ftstroke.c
             src/base/ftgxval.c
             src/base/ftfntfmt.c
             src/base/ftmm.c
             src/base/ftgasp.c
             src/base/ftbitmap.c
             src/base/ftglyph.c
             src/base/ftpatent.c
             src/base/ftsynth.c
             src/base/ftfstype.c
             src/base/ftinit.c
             src/base/ftpfr.c

  Install-includes:
             ft2build.h
             ftconfig.h
             freetype/ftgasp.h
             freetype/fterrors.h
             freetype/ftsystem.h
             freetype/ftmoderr.h
             freetype/ftrender.h
             freetype/ftchapters.h
             freetype/config/ftheader.h
             freetype/config/ftoption.h
             freetype/config/ftstdlib.h
             freetype/config/ftmodule.h
             freetype/config/ftconfig.h
             freetype/freetype.h
             freetype/ftwinfnt.h
             freetype/ftgzip.h
             freetype/ftbdf.h
             freetype/ftlist.h
             freetype/ftautoh.h
             freetype/tttables.h
             freetype/ftmm.h
             freetype/ftsizes.h
             freetype/fttrigon.h
             freetype/ftpfr.h
             freetype/ftotval.h
             freetype/ftstroke.h
             freetype/tttags.h
             freetype/ftsynth.h
             freetype/ftimage.h
             freetype/ftadvanc.h
             freetype/ftgxval.h
             freetype/ftbbox.h
             freetype/ftcache.h
             freetype/ftbitmap.h
             freetype/ftcid.h
             freetype/ftglyph.h
             freetype/ftoutln.h
             freetype/fterrdef.h
             freetype/internal/ftmemory.h
             freetype/internal/ftcalc.h
             freetype/internal/pshints.h
             freetype/internal/services/svgxval.h
             freetype/internal/services/svpfr.h
             freetype/internal/services/svkern.h
             freetype/internal/services/svttcmap.h
             freetype/internal/services/svbdf.h
             freetype/internal/services/svwinfnt.h
             freetype/internal/services/svprop.h
             freetype/internal/services/svgldict.h
             freetype/internal/services/svsfnt.h
             freetype/internal/services/svotval.h
             freetype/internal/services/svtteng.h
             freetype/internal/services/svttglyf.h
             freetype/internal/services/svpscmap.h
             freetype/internal/services/svcid.h
             freetype/internal/services/svpsinfo.h
             freetype/internal/services/svpostnm.h
             freetype/internal/services/svmm.h
             freetype/internal/services/svfntfmt.h
             freetype/internal/ftstream.h
             freetype/internal/fthash.h
             freetype/internal/ftvalid.h
             freetype/internal/tttypes.h
             freetype/internal/ftdebug.h
             freetype/internal/autohint.h
             freetype/internal/ftobjs.h
             freetype/internal/ftrfork.h
             freetype/internal/ftgloadr.h
             freetype/internal/fttrace.h
             freetype/internal/ftdriver.h
             freetype/internal/internal.h
             freetype/internal/psaux.h
             freetype/internal/t1types.h
             freetype/internal/sfnt.h
             freetype/internal/ftserv.h
             freetype/internal/ftpic.h
             freetype/ftcffdrv.h
             freetype/ftmodapi.h
             freetype/ftincrem.h
             freetype/t1tables.h
             freetype/ftlcdfil.h
             freetype/ftfntfmt.h
             freetype/ttunpat.h
             freetype/ttnameid.h
             freetype/ftlzw.h
             freetype/ftbzip2.h
             freetype/ftsnames.h
             freetype/ftttdrv.h
             freetype/fttypes.h

source-repository head
  type: git
  location: git://github.com/dagit/freetype2.git
