Name:                freetype2
Version:             0.1.2
Synopsis:            Haskell binding for FreeType 2 library
Description:         Wrapper around FreeType 2 library.  Relevant
                     exerpts from the FreeType 2 website:
                     .
                     What is FreeType 2?
                     .
                     FreeType 2 is a software font engine that is
                     designed to be small, efficient, highly
                     customizable, and portable while capable of
                     producing high-quality output (glyph images). It
                     can be used in graphics libraries, display
                     servers, font conversion tools, text image
                     generation tools, and many other products as
                     well.
                     .
                     The following is a non-exhaustive list of
                     features provided by FreeType 2.
                     .
                     * FreeType 2 provides a simple and easy-to-use
                     API to access font content in a uniform way,
                     independently of the file format. Additionally,
                     some format-specific APIs can be used to access
                     special data in the font file.
                     .
                     * Unlike most comparable libraries, FreeType 2
                     supports scalable font formats like TrueType or
                     Type 1 natively and can return the outline data
                     (and control instructions/hints) to client
                     applications.
                     .
                     By default, FreeType 2 supports the following
                     font formats.
                     .
                     * TrueType fonts (and collections)
                     .
                     * Type 1 fonts
                     .
                     * CID-keyed Type 1 fonts
                     .
                     * CFF fonts
                     .
                     * OpenType fonts (both TrueType and CFF variants)
                     .
                     * SFNT-based bitmap fonts
                     .
                     * X11 PCF fonts
                     .
                     * Windows FNT fonts
                     .
                     * BDF fonts (including anti-aliased ones)
                     .
                     * PFR fonts
                     .
                     * Type 42 fonts (limited support)
                     .
                     From a given glyph outline, FreeType 2 is capable
                     of producing a high-quality monochrome bitmap, or
                     anti-aliased pixmap, using 256 levels of
                     'gray'. This is much better than the 5 levels
                     used by Windows 9x\/98\/NT\/2000 or FreeType 1.
                     .
                     FreeType 2 supports all the character mappings
                     defined by the TrueType and OpenType
                     specification. It is also capable of
                     automatically synthetizing a Unicode charmap from
                     Type 1 fonts, which puts an end to the painful
                     'encoding translation' headache common with this
                     format (of course, original encodings are also
                     available in the case where you need them).
                     .
                     The FreeType 2 core API provides simple functions
                     to access advanced information like glyph names
                     or kerning data.
                     .
                     FreeType 2 provides information that is often not
                     available from other similar font engines, like
                     kerning distances, glyph names, vertical metrics,
                     etc.
                     .
                     FreeType 2 provides its own caching subsystem
                     since release 2.0.1. It can be used to cache
                     either face instances or glyph images
                     efficiently.
License:             BSD3
License-file:        LICENSE
Author:              Jason Dagit <dagitj@gmail.com>
Maintainer:          Jason Dagit <dagitj@gmail.com>
Copyright:           Copyright Jason Dagit 2011
Category:            Graphics
Build-type:          Simple
Extra-source-files:  freetype2/include/*.h
                     freetype2/include/freetype/*.h
                     freetype2/include/freetype/config/*.h
                     freetype2/include/freetype/internal/*.h
                     freetype2/include/freetype/internal/services/*.h
                     freetype2/src/autofit/*.c
                     freetype2/src/autofit/*.h
                     freetype2/src/base/*.c
                     freetype2/src/base/*.h
                     freetype2/src/bdf/*.c
                     freetype2/src/bdf/*.h
                     freetype2/src/cache/*.c
                     freetype2/src/cache/*.h
                     freetype2/src/cff/*.c
                     freetype2/src/cff/*.h
                     freetype2/src/cid/*.c
                     freetype2/src/cid/*.h
                     freetype2/src/gxvalid/*.c
                     freetype2/src/gxvalid/*.h
                     freetype2/src/gzip/*.c
                     freetype2/src/gzip/*.h
                     freetype2/src/lzw/*.c
                     freetype2/src/lzw/*.h
                     freetype2/src/otvalid/*.c
                     freetype2/src/otvalid/*.h
                     freetype2/src/pcf/*.c
                     freetype2/src/pcf/*.h
                     freetype2/src/pfr/*.c
                     freetype2/src/pfr/*.h
                     freetype2/src/psaux/*.c
                     freetype2/src/psaux/*.h
                     freetype2/src/pshinter/*.c
                     freetype2/src/pshinter/*.h
                     freetype2/src/psnames/*.c
                     freetype2/src/psnames/*.h
                     freetype2/src/raster/*.c
                     freetype2/src/raster/*.h
                     freetype2/src/sfnt/*.c
                     freetype2/src/sfnt/*.h
                     freetype2/src/smooth/*.c
                     freetype2/src/smooth/*.h
                     freetype2/src/truetype/*.c
                     freetype2/src/truetype/*.h
                     freetype2/src/type1/*.c
                     freetype2/src/type1/*.h
                     freetype2/src/type42/*.c
                     freetype2/src/type42/*.h
                     freetype2/src/winfonts/*.c
                     freetype2/src/winfonts/*.h

Cabal-version:       >=1.8

Library
  Exposed-modules: FreeType
                   FreeType.Internal

                   FreeType.Lens
                   FreeType.Lens.Internal

                   FreeType.Exception
                   FreeType.Exception.Internal

                   FreeType.Core.Version
                   FreeType.Core.Version.Internal
                   FreeType.Core.Types
                   FreeType.Core.Base
                   FreeType.Core.Base.Internal
                   FreeType.Core.Unicode
                   FreeType.Core.Color
                   FreeType.Core.Color.Internal
                   FreeType.Core.Layer
                   FreeType.Core.Glyph
                   FreeType.Core.Glyph.Internal
                   FreeType.Core.Mac
                   FreeType.Core.Mac.Internal
                   FreeType.Core.Size
                   FreeType.Core.Size.Internal
                   FreeType.Format.Multiple
                   FreeType.Format.Multiple.Internal
                   FreeType.Format.TrueType
                   FreeType.Format.TrueType.Internal
                   FreeType.Format.Type1
                   FreeType.Format.Type1.Internal
                   FreeType.Format.SFNT
                   FreeType.Format.SFNT.Internal
                   FreeType.Format.BDF
                   FreeType.Format.BDF.Internal
                   FreeType.Format.CID
                   FreeType.Format.CID.Internal
                   FreeType.Format.PFR
                   FreeType.Format.PFR.Internal
                   FreeType.Format.WinFNT
                   FreeType.Format.WinFNT.Internal
                   FreeType.Format.Font
                   FreeType.Format.Font.Internal
                   FreeType.Format.Gasp
                   FreeType.Control.Driver
                   FreeType.Control.Parameter
                   FreeType.Control.Subpixel
                   FreeType.Control.Subpixel.Internal
                   FreeType.Cache
                   FreeType.Cache.Internal
                   FreeType.Support.Computations
                   FreeType.Support.Computations.Internal
                   FreeType.Support.List
                   FreeType.Support.List.Internal
                   FreeType.Support.Bitmap
                   FreeType.Support.Bitmap.Internal
                   FreeType.Support.Outline
                   FreeType.Support.Outline.Internal
                   FreeType.Support.Scanline
                   FreeType.Support.Scanline.Internal
                   FreeType.Support.Advance
                   FreeType.Support.Advance.Internal
                   FreeType.Support.Glyph
                   FreeType.Support.Glyph.Internal
                   FreeType.Support.System
                   FreeType.Support.System.Internal
                   FreeType.Support.Module
                   FreeType.Support.Module.Internal
                   FreeType.Support.GZIP
                   FreeType.Support.GZIP.Internal
                   FreeType.Support.LZW
                   FreeType.Support.LZW.Internal
                   FreeType.Support.BZIP2
                   FreeType.Support.BZIP2.Internal
                   FreeType.Error.Enumerations
                   FreeType.Error.Enumerations.Internal
                   FreeType.Error.Values
                   FreeType.Miscellaneous.OpenType
                   FreeType.Miscellaneous.OpenType.Internal
                   FreeType.Miscellaneous.Incremental
                   FreeType.Miscellaneous.Incremental.Internal
                   FreeType.Miscellaneous.TrueType
                   FreeType.Miscellaneous.TrueTypeGX
                   FreeType.Miscellaneous.TrueTypeGX.Internal
  
  Other-modules: FreeType.Circular.Types
                 FreeType.Core.Types.Types
                 FreeType.Core.Base.Types
                 FreeType.Core.Color.Types
                 FreeType.Core.Glyph.Types
                 FreeType.Core.Layer.Types
                 FreeType.Core.Mac.Types
                 FreeType.Format.BDF.Types
                 FreeType.Format.Multiple.Types
                 FreeType.Format.SFNT.Types
                 FreeType.Format.TrueType.Types
                 FreeType.Format.Type1.Types
                 FreeType.Format.WinFNT.Types
                 FreeType.Control.Driver.Types
                 FreeType.Control.Subpixel.Types
                 FreeType.Cache.Types
                 FreeType.Support.Computations.Types
                 FreeType.Support.Glyph.Types
                 FreeType.Support.List.Types
                 FreeType.Support.Module.Types
                 FreeType.Support.Outline.Types
                 FreeType.Support.Scanline.Types
                 FreeType.Support.System.Types
                 FreeType.Miscellaneous.Incremental.Types
                 FreeType.Miscellaneous.TrueType.Types

  Build-depends: base >= 4.5 && < 5
               , microlens
               , microlens-th
               , template-haskell
               , vector

  Build-tools: hsc2hs
  ghc-options: -Wall
               -Wno-deprecations
  include-dirs: freetype2/include
                freetype2/include/freetype
                freetype2/include/freetype/config
                freetype2/src/base
                freetype2/src/truetype
                freetype2/src/type1
                freetype2/src/cff
                freetype2/src/cid
                freetype2/src/pfr
                freetype2/src/type42
                freetype2/src/winfonts
                freetype2/src/pcf
                freetype2/src/bdf
                freetype2/src/sfnt
                freetype2/src/autofit
                freetype2/src/pshinter
                freetype2/src/raster
                freetype2/src/smooth
                freetype2/src/cache
                freetype2/src/gzip
                freetype2/src/lzw
                freetype2/src/psaux
                freetype2/src/psnames

  cc-options: -DFT_CONFIG_CONFIG_H=<ftconfig.h>
              -DFT2_BUILD_LIBRARY
              -DFT_CONFIG_MODULES_H=<ftmodule.h>
              -DDARWIN_NO_CARBON

  c-sources: freetype2/src/base/ftsystem.c
             freetype2/src/base/ftdebug.c
             freetype2/src/base/ftinit.c
             freetype2/src/base/ftbase.c
             freetype2/src/base/ftbbox.c
             freetype2/src/base/ftbdf.c
             freetype2/src/base/ftbitmap.c
             freetype2/src/base/ftcid.c
             freetype2/src/base/ftfstype.c
             freetype2/src/base/ftgasp.c
             freetype2/src/base/ftglyph.c
             freetype2/src/base/ftgxval.c
             freetype2/src/base/ftmm.c
             freetype2/src/base/ftotval.c
             freetype2/src/base/ftpatent.c
             freetype2/src/base/ftpfr.c
             freetype2/src/base/ftstroke.c
             freetype2/src/base/ftsynth.c
             freetype2/src/base/ftsystem.c
             freetype2/src/base/fttype1.c
             freetype2/src/base/ftwinfnt.c
             freetype2/src/bzip2/ftbzip2.c
             freetype2/src/truetype/truetype.c
             freetype2/src/type1/type1.c
             freetype2/src/cff/cff.c
             freetype2/src/cid/type1cid.c
             freetype2/src/pfr/pfr.c
             freetype2/src/type42/type42.c
             freetype2/src/winfonts/winfnt.c
             freetype2/src/pcf/pcf.c
             freetype2/src/bdf/bdf.c
             freetype2/src/sfnt/sfnt.c
             freetype2/src/autofit/autofit.c
             freetype2/src/pshinter/pshinter.c
             freetype2/src/raster/raster.c
             freetype2/src/smooth/smooth.c
             freetype2/src/cache/ftcache.c
             freetype2/src/gzip/ftgzip.c
             freetype2/src/lzw/ftlzw.c
             freetype2/src/psaux/psaux.c
             freetype2/src/psnames/psmodule.c

test-suite dynamic-function-check
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends: base >= 4.5 && < 5
               , microlens
               , microlens-th
               , template-haskell

  other-modules: Test.Report
                 
                 FreeType.Internal.Lens

                 FreeType
                 FreeType.Lens
              
                 FreeType.Core.Version
                 FreeType.Core.Types
                 FreeType.Core.Base
                 FreeType.Core.Unicode
                 FreeType.Core.Color
                 FreeType.Core.Layer
                 FreeType.Core.Glyph
                 FreeType.Core.Mac
                 FreeType.Core.Size
                 FreeType.Format.Multiple
                 FreeType.Format.TrueType
                 FreeType.Format.Type1
                 FreeType.Format.SFNT
                 FreeType.Format.BDF
                 FreeType.Format.CID
                 FreeType.Format.PFR
                 FreeType.Format.WinFNT
                 FreeType.Format.Font
                 FreeType.Format.Gasp
                 FreeType.Control.Driver
                 FreeType.Control.Parameter
                 FreeType.Control.Subpixel
                 FreeType.Cache
                 FreeType.Support.Computations
                 FreeType.Support.List
                 FreeType.Support.Bitmap
                 FreeType.Support.Outline
                 FreeType.Support.Scanline
                 FreeType.Support.Advance
                 FreeType.Support.Glyph
                 FreeType.Support.System
                 FreeType.Support.Module
                 FreeType.Support.GZIP
                 FreeType.Support.LZW
                 FreeType.Support.BZIP2
                 FreeType.Error.Enumerations
                 FreeType.Error.Values
                 FreeType.Miscellaneous.OpenType
                 FreeType.Miscellaneous.Incremental
                 FreeType.Miscellaneous.TrueType
                 FreeType.Miscellaneous.TrueTypeGX

                 FreeType.Circular.Internal
                 FreeType.Core.Types.Internal
                 FreeType.Core.Base.Internal
                 FreeType.Core.Color.Internal
                 FreeType.Core.Glyph.Internal
                 FreeType.Core.Layer.Internal
                 FreeType.Format.BDF.Internal
                 FreeType.Format.Multiple.Internal
                 FreeType.Format.SFNT.Internal
                 FreeType.Format.TrueType.Internal
                 FreeType.Format.Type1.Internal
                 FreeType.Format.WinFNT.Internal
                 FreeType.Cache.Internal  
                 FreeType.Support.Module.Internal
                 FreeType.Support.Outline.Internal
                 FreeType.Support.Scanline.Internal
                 FreeType.Miscellaneous.Incremental.Internal

  include-dirs: freetype2/include
                freetype2/include/freetype
                freetype2/include/freetype/config
                freetype2/src/base
                freetype2/src/truetype
                freetype2/src/type1
                freetype2/src/cff
                freetype2/src/cid
                freetype2/src/pfr
                freetype2/src/type42
                freetype2/src/winfonts
                freetype2/src/pcf
                freetype2/src/bdf
                freetype2/src/sfnt
                freetype2/src/autofit
                freetype2/src/pshinter
                freetype2/src/raster
                freetype2/src/smooth
                freetype2/src/cache
                freetype2/src/gzip
                freetype2/src/lzw
                freetype2/src/psaux
                freetype2/src/psnames

  cc-options: -DFT_CONFIG_CONFIG_H=<ftconfig.h>
              -DFT2_BUILD_LIBRARY
              -DFT_CONFIG_MODULES_H=<ftmodule.h>
              -DDARWIN_NO_CARBON

  c-sources: freetype2/src/base/ftsystem.c
             freetype2/src/base/ftdebug.c
             freetype2/src/base/ftinit.c
             freetype2/src/base/ftbase.c
             freetype2/src/base/ftbbox.c
             freetype2/src/base/ftbdf.c
             freetype2/src/base/ftbitmap.c
             freetype2/src/base/ftcid.c
             freetype2/src/base/ftfstype.c
             freetype2/src/base/ftgasp.c
             freetype2/src/base/ftglyph.c
             freetype2/src/base/ftgxval.c
             freetype2/src/base/ftmm.c
             freetype2/src/base/ftotval.c
             freetype2/src/base/ftpatent.c
             freetype2/src/base/ftpfr.c
             freetype2/src/base/ftstroke.c
             freetype2/src/base/ftsynth.c
             freetype2/src/base/ftsystem.c
             freetype2/src/base/fttype1.c
             freetype2/src/base/ftwinfnt.c
             freetype2/src/bzip2/ftbzip2.c
             freetype2/src/truetype/truetype.c
             freetype2/src/type1/type1.c
             freetype2/src/cff/cff.c
             freetype2/src/cid/type1cid.c
             freetype2/src/pfr/pfr.c
             freetype2/src/type42/type42.c
             freetype2/src/winfonts/winfnt.c
             freetype2/src/pcf/pcf.c
             freetype2/src/bdf/bdf.c
             freetype2/src/sfnt/sfnt.c
             freetype2/src/autofit/autofit.c
             freetype2/src/pshinter/pshinter.c
             freetype2/src/raster/raster.c
             freetype2/src/smooth/smooth.c
             freetype2/src/cache/ftcache.c
             freetype2/src/gzip/ftgzip.c
             freetype2/src/lzw/ftlzw.c
             freetype2/src/psaux/psaux.c
             freetype2/src/psnames/psmodule.c

source-repository head
  type: git
  location: git://github.com/dagit/freetype2.git
